# parallel-dynamic-time-warping

./: CMakeLists.txt  README.md  diagonal.cpp  main.cpp  parallel-job.in  parallel.cpp  row.cpp  serial-job.in  serial.cpp  variable.cpp
plot/: diag-speedup.txt  metrics.py  plot.py  row-diag-runtime.txt  row-speedup.txt
